--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ dist/
 .env.production
 .env.development
 
+# Local configuration (contains account-specific IDs)
+wrangler.local.toml
+
 # OS generated files
 .DS_Store
 .DS_Store?
