chore: Add LOCAL-SETUP.md to gitignore for security

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ dist/
 
 # Local configuration (contains account-specific IDs)
 wrangler.local.toml
+LOCAL-SETUP.md
 
 # OS generated files
 .DS_Store
